--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <script src="https://cdn.tailwindcss.com"></script>
    <!-- favicon -->
    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+   <!-- fontawsome-->
+   <script src="https://kit.fontawesome.com/81f094ec72.js" crossorigin="anonymous"></script>
     <!-- tailwind custom color -->
     <script>
         tailwind.config = {
@@ -23,52 +25,113 @@
       </script>
 </head>
 <body>
-    <header>
-      <nav>
-
-      </nav>
-      <!-- banner section -->
-      <div class="carousel w-full">
-        <!-- slide 1 -->
-        <div id="slide1" class="carousel-item relative w-full">
-          <img src="./images/banner1.png" class="w-full" />
-          
-            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide4" class="btn btn-circle">❮</a>
-            <a href="#slide2" class="btn btn-circle">❯</a>
+    <header class=" container mx-auto">
+      <nav class="my-10" >
+        <div class="navbar h-20 bg-base-100 bg-[#F85559] rounded-[600px]">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <label tabindex="0" class="btn btn-ghost btn-circle">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+              </label>
+              <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                <li><a>Home</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Shop</a></li>
+                <li><a>All Fruits</a></li>
+              </ul>
+            </div>
           </div>
-        </div> 
-        <!-- slide 2-->
-        <div id="slide2" class="carousel-item relative w-full">
-          <img src="./images/banner2.png" class="w-full" />
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide1" class="btn btn-circle">❮</a> 
-            <a href="#slide3" class="btn btn-circle">❯</a>
+          <div class="navbar-center gap-2">
+            <img class="h-10" src="./images/logo.png" alt="">
+            <h1 class="text-3xl text-white">Fruit Burst</h1>
           </div>
-        </div> 
-        <!-- slide 3-->
-        <div id="slide3" class="carousel-item relative w-full">
-          <img src="./images/banner3.png" class="w-full" />
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide2" class="btn btn-circle">❮</a> 
-            <a href="#slide4" class="btn btn-circle">❯</a>
-          </div>
-        </div> 
-        <!-- slide 4-->
-        <div id="slide4" class="carousel-item relative w-full">
-          <img src="./images/banner4.png" class="w-full" />
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide3" class="btn btn-circle">❮</a> 
-            <a href="#slide1" class="btn btn-circle">❯</a>
+          <div class="navbar-end">
+            <div class="absolute">
+              <input type="text" placeholder="Search here" class="input input-bordered w-full max-w-xs rounded-[50px] mr-20"/>
+            </div>
+            <div class="relative right-4">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
           </div>
         </div>
+      </nav>
+      <!-- banner section -->
+<div class="carousel w-full">
+  <!-- slide 1 -->
+  <div id="slide1" class="carousel-item relative w-full">
+    <div class="hero h-[700px]" style="background-image: url(images/banner1.png);">
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-5 text-4xl text-white font-bold">Exotic tastes at your doorstep</h1>
+          <p class="mb-5">We supply highly quality organic products</p>
+          <button class="btn text-white bg-[#F85559]">Shop Now</button>
+        </div>
       </div>
+    </div>
+    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+      <a href="#slide4" class="btn btn-circle">❮</a> 
+      <a href="#slide2" class="btn btn-circle">❯</a>
+    </div>
+  </div> 
+  <!-- slide 2 -->
+  <div id="slide2" class="carousel-item relative w-full">
+    <div class="hero h-[700px]" style="background-image: url(images/banner2.png);">
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-5 text-4xl text-white font-bold">Exotic tastes at your doorstep</h1>
+          <p class="mb-5">We supply highly quality organic products</p>
+          <button class="btn text-white bg-[#F85559]">Shop Now</button>
+        </div>
+      </div>
+    </div>
+    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+      <a href="#slide2" class="btn btn-circle">❮</a> 
+      <a href="#slide3" class="btn btn-circle">❯</a>
+    </div>
+  </div> 
+  <!-- slide 3 -->
+  <div id="slide3" class="carousel-item relative w-full">
+    <div class="hero h-[700px]" style="background-image: url(images/banner3.png);">
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-5 text-4xl text-white font-bold">Exotic tastes at your doorstep</h1>
+          <p class="mb-5">We supply highly quality organic products</p>
+          <button class="btn text-white bg-[#F85559]">Shop Now</button>
+        </div>
+      </div>
+    </div>
+    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+      <a href="#slide3" class="btn btn-circle">❮</a> 
+      <a href="#slide4" class="btn btn-circle">❯</a>
+    </div>
+  </div> 
+  <!-- slide 4 -->
+  <div id="slide4" class="carousel-item relative w-full">
+    <div class="hero h-[700px]" style="background-image: url(./images/banner4.png);">
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-5 text-4xl font-bold text-white">Exotic tastes at your doorstep</h1>
+          <p class="mb-5">We supply highly quality organic products</p>
+          <button class="btn text-white bg-[#F85559]">Shop Now</button>
+        </div>
+      </div>
+    </div>
+    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+      <a href="#slide4" class="btn btn-circle">❮</a> 
+      <a href="#slide1" class="btn btn-circle">❯</a>
+    </div>
+  </div> 
+</div> 
     </header>
-    <main>
+    <main class=" container mx-auto">
       <!-- section 1-->
-      <section>
+      <section class="mt-10">
         <div>
-          <div class="flex">
+          <div class="flex gap-20">
             <div class="text-left">
               <h2 class="font-bold text-2xl">Deal of the day</h2>
               <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
@@ -100,13 +163,14 @@
               </div>
             </div>
           </div>
-          <div class="flex gap-5">
+          <div class="flex gap-5 my-12">
             <div class="card w-96 bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
                 <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>______________________</p>
                 <p>Apples</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -124,6 +188,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>______________________</p>
                 <p>Orange</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -141,6 +206,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>______________________</p>
                 <p>Red Dragon</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -158,6 +224,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>______________________</p>
                 <p>Banana</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -175,12 +242,70 @@
           </div>
         </div>
       </section>
+      <!-- section 2 -->
+      <section class="my-10">
+        <div class="hero h-[690px]" style="background-image: url(./images/team.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-xl">
+              <h1 class="mb-5 text-4xl font-bold">Meet the team section</h1>
+              <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+              <div class="flex justify-between gap-10">
+                <div class="text-center">
+                  <img src="./images/member1.png" alt="">
+                  <h1 class="text-white">Awlad Hossain</h1>
+                  <p>Fruits Expert</p>
+                  <div class="flex justify-around my-4">
+                    <a href="https://www.facebook.com/"><img src="./images/facebook 1.png" alt=""></a>
+                    <a href="https://twitter.com/"><img src="./images/twitter (1) 1.png" alt=""></a>
+                    <a href="https://www.linkedin.com/"><img src="./images/linkedin 1.png" alt=""></a>
+
+                  </div>
+                </div>
+                <div class="text-center">
+                  <img src="./images/member2.png" alt="">
+                  <h1 class="text-white">Safia Chowdhury</h1>
+                  <p>Fruits Expert</p>
+                  <div class="flex justify-around my-4">
+                    <a href="https://www.facebook.com/"><img src="./images/facebook 1.png" alt=""></a>
+                    <a href="https://twitter.com/"><img src="./images/twitter (1) 1.png" alt=""></a>
+                    <a href="https://www.linkedin.com/"><img src="./images/linkedin 1.png" alt=""></a>
+
+                  </div>
+                </div>
+                <div class="text-center">
+                  <img src="./images/member3.png" alt="">
+                  <h1 class="text-white">Rokib Hossain</h1>
+                  <p>Fruits Expert</p>
+                  <div class="flex justify-around my-4">
+                    <a href="https://www.facebook.com/"><img src="./images/facebook 1.png" alt=""></a>
+                    <a href="https://twitter.com/"><img src="./images/twitter (1) 1.png" alt=""></a>
+                    <a href="https://www.linkedin.com/"><img src="./images/linkedin 1.png" alt=""></a>
+
+                  </div>
+                </div>
+                <div class="text-center">
+                  <img src="./images/member4.png" alt="">
+                  <h1 class=" text-white">Chaity</h1>
+                  <p>Fruits Expert</p>
+                  <div class="flex justify-around my-4">
+                    <a href="https://www.facebook.com/"><img src="./images/facebook 1.png" alt=""></a>
+                    <a href="https://twitter.com/"><img src="./images/twitter (1) 1.png" alt=""></a>
+                    <a href="https://www.linkedin.com/"><img src="./images/linkedin 1.png" alt=""></a>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer section -->
     <footer class="grid footer footer-center p-10 bg-black text-primary-content">
         <div>
           <div class="flex items-center">
-            <img class="h-8" src="images/logo.png" alt="">
+            <img class="h-8" src="./images/logo.png" alt="">
           <p class="font-bold text-xl text-white pl-2">Fruit Burst</p>
           </div>
           <ul class="flex gap-10 text-white">
@@ -200,5 +325,5 @@
           </div>
         </div>
       </footer>
-</body>
-</html>
+    </body>
+    </html>
