--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="carousel w-full">
   <!-- slide 1 -->
   <div id="slide1" class="carousel-item relative w-full">
-    <div class="hero h-[700px]" style="background-image: url(images/banner1.png);">
+    <div class="hero h-[700px]" style="background-image: url(./images/banner1.png);">
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
         <div class="max-w-md">
@@ -76,7 +76,7 @@
   </div> 
   <!-- slide 2 -->
   <div id="slide2" class="carousel-item relative w-full">
-    <div class="hero h-[700px]" style="background-image: url(images/banner2.png);">
+    <div class="hero h-[700px]" style="background-image: url(./images/banner2.png);">
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
         <div class="max-w-md">
@@ -93,7 +93,7 @@
   </div> 
   <!-- slide 3 -->
   <div id="slide3" class="carousel-item relative w-full">
-    <div class="hero h-[700px]" style="background-image: url(images/banner3.png);">
+    <div class="hero h-[700px]" style="background-image: url(./images/banner3.png);">
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
         <div class="max-w-md">
@@ -124,8 +124,30 @@
       <a href="#slide4" class="btn btn-circle">❮</a> 
       <a href="#slide1" class="btn btn-circle">❯</a>
     </div>
-  </div> 
+  </div>
 </div> 
+<div class="flex gap-20 h-[250px] w-[1196px] bg-red-300">
+  <div class="text-center pt-10">
+    <img src="./images/fruit1.png" alt="">
+    <h3>Grapes</h3>
+  </div>
+  <div class="text-center pt-10">
+    <img src="./images/fruit2.png" alt="">
+    <h3>Orange</h3>
+  </div>
+  <div class="text-center pt-10">
+    <img src="./images/fruit3.png" alt="">
+    <h3>Mango</h3>
+  </div>
+  <div class="text-center pt-10">
+    <img src="./images/fruit4.png" alt="">
+    <h3>Strawberry</h3>
+  </div>
+  <div class="text-center pt-10">
+    <img src="./images/fruit5.png" alt="">
+    <h3>Bedana</h3>
+  </div>
+</div>
     </header>
     <main class=" container mx-auto">
       <!-- section 1-->
@@ -170,7 +192,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">12.90$ - 18.85$</h2>
-                <p>______________________</p>
+                <div class=" w-auto divider"></div>
                 <p>Apples</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -180,6 +202,9 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                 </div>
                 <a class="text-[#F85559]" href="">Details</a>
+
+                
+
               </div>
             </div>
             <div class="card w-96 bg-base-100 shadow-xl">
@@ -188,7 +213,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">12.90$ - 18.85$</h2>
-                <p>______________________</p>
+                <div class=" w-auto divider"></div>
                 <p>Orange</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -206,7 +231,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">12.90$ - 18.85$</h2>
-                <p>______________________</p>
+                <div class=" w-auto divider"></div>
                 <p>Red Dragon</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -224,7 +249,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">12.90$ - 18.85$</h2>
-                <p>______________________</p>
+                <div class=" w-auto divider"></div>
                 <p>Banana</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -296,6 +321,67 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- bonus section 3 -->
+      <section class="container mx-auto p-10">
+        <div>
+          <div class="text-center">
+            <h1 class="text-5xl font-bold">Why Choose Us</h1>
+            <p class="mt-10">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+          </div>
+          <div class="flex">
+            <div>
+              <div>
+                <div class="p-5 pl-20 relative">
+                  <img class="absolute -left-0" src="./images/Ellipse 2 (5).png" alt="">
+                  <h3 class="font-bold text-2xl">Dedicated Team</h3>
+                  <div class="divider w-[100px]"></div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+              <div>
+                <div class="p-5 pl-20 relative">
+                  <img class="absolute -left-0" src="./images/Ellipse 2 (4).png" alt="">
+                  <h3 class="font-bold text-2xl">Fresh is Best</h3>
+                  <div class="divider w-[100px]"></div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+              <div>
+                <div class="p-5 pl-20 relative">
+                  <img class="absolute -left-0" src="./images/Ellipse 2 (3).png" alt="">
+                  <h3 class="font-bold text-2xl">Gift Certificates</h3>
+                  <div class="divider w-[100px]"></div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+            </div>
+            <div class="mt-10 pl-10">
+              <img src="./images/whychoose1.png" alt="">
+            </div>
+            <div>
+                <div class="p-5 pl-20 relative text-right">
+                  <img class="-right-16 absolute" src="./images/Ellipse 2.png" alt="">
+                  <h3 class="font-bold text-2xl">Integrated Supplier</h3>
+                      <div class="divider w-[100px] ml-60"></div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+              </div>
+                <div class="p-5 pl-20 relative text-right">
+                  <img class="-right-16 absolute" src="./images/Ellipse 2 (1).png" alt="">
+                  <h3 class="font-bold text-2xl">Sustainable Practice</h3>
+                      <div class="divider w-[100px] ml-60"></div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+              </div>
+                <div class="p-5 pl-20 relative text-right">
+                  <img class="-right-16 absolute" src="./images/Ellipse 2 (2).png" alt="">
+                  <h3 class="font-bold text-2xl">The Benefits Only</h3>
+                      <div class="divider w-[100px] ml-60"></div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+              </div>
+            </div>
             </div>
           </div>
         </div>
