--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
   </div>
 </div> 
-<div class="flex gap-20 h-[250px] w-[1196px] bg-red-300">
+<div class="flex ml-20 gap-20 h-[250px] w-[1196px] bg-red-300">
   <div class="text-center pt-10">
     <img src="./images/fruit1.png" alt="">
     <h3>Grapes</h3>
@@ -201,10 +201,30 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                 </div>
-                <a class="text-[#F85559]" href="">Details</a>
-
-                
-
+                <!-- Open the modal using ID.showModal() method -->
+<button class="text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
+<dialog id="my_modal_1" class="modal">
+  <form method="dialog" class="modal-box align-center h-[500px]">
+    <img class="pl-20 ml-14 h-[200px]" src="./images/fruit6.png" alt="">
+    <div class="pt-10">
+      <h1 class="text-2xl font-bold">Apples</h1>
+    <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+    <!-- rating -->
+    <div class="rating">
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+    </div>
+    <div class="">
+      <!-- if there is a button in form, it will close the modal -->
+      <button class="btn text-[#F85559]">Close</button>
+      <button class="btn text-white bg-[#F85559]">Buy Now</button>
+    </div>
+    </div>
+  </form>
+</dialog>
               </div>
             </div>
             <div class="card w-96 bg-base-100 shadow-xl">
@@ -222,7 +242,30 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                 </div>
-                <a class="text-[#F85559]" href="">Details</a>
+                 <!-- Open the modal using ID.showModal() method -->
+<button class="text-[#F85559]" onclick="my_modal_2.showModal()">Details</button>
+<dialog id="my_modal_2" class="modal">
+  <form method="dialog" class="modal-box align-center h-[500px]">
+    <img class="pl-20 ml-14 h-[200px]" src="./images/fruit7.png" alt="">
+    <div class="pt-10">
+      <h1 class="text-2xl font-bold">Orange</h1>
+    <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+    <!-- rating -->
+    <div class="rating">
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+    </div>
+    <div class="">
+      <!-- if there is a button in form, it will close the modal -->
+      <button class="btn text-[#F85559]">Close</button>
+      <button class="btn text-white bg-[#F85559]">Buy Now</button>
+    </div>
+    </div>
+  </form>
+</dialog>
               </div>
             </div>
             <div class="card w-96 bg-base-100 shadow-xl">
@@ -240,7 +283,30 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                 </div>
-                <a class="text-[#F85559]" href="">Details</a>
+                     <!-- Open the modal using ID.showModal() method -->
+<button class="text-[#F85559]" onclick="my_modal_3.showModal()">Details</button>
+<dialog id="my_modal_3" class="modal">
+  <form method="dialog" class="modal-box align-center h-[500px]">
+    <img class="pl-20 ml-14 h-[200px]" src="./images/fruit8.png" alt="">
+    <div class="pt-10">
+      <h1 class="text-2xl font-bold">Red Dragon</h1>
+    <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+    <!-- rating -->
+    <div class="rating">
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+    </div>
+    <div class="">
+      <!-- if there is a button in form, it will close the modal -->
+      <button class="btn text-[#F85559]">Close</button>
+      <button class="btn text-white bg-[#F85559]">Buy Now</button>
+    </div>
+    </div>
+  </form>
+</dialog>
               </div>
             </div>
             <div class="card w-96 bg-base-100 shadow-xl">
@@ -258,7 +324,30 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                 </div>
-                <a class="text-[#F85559]" href="">Details</a>
+                <!-- Open the modal using ID.showModal() method -->
+<button class="text-[#F85559]" onclick="my_modal_4.showModal()">Details</button>
+<dialog id="my_modal_4" class="modal">
+  <form method="dialog" class="modal-box align-center h-[500px]">
+    <img class="pl-20 ml-14 h-[200px]" src="./images/fruit9.png" alt="">
+    <div class="pt-10">
+      <h1 class="text-2xl font-bold">Banana</h1>
+    <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+    <!-- rating -->
+    <div class="rating">
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+    </div>
+    <div class="">
+      <!-- if there is a button in form, it will close the modal -->
+      <button class="btn text-[#F85559]">Close</button>
+      <button class="btn text-white bg-[#F85559]">Buy Now</button>
+    </div>
+    </div>
+  </form>
+</dialog>
               </div>
             </div>
           </div>
