--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </nav>
       <!-- banner section -->
-<div class="carousel w-full">
+<div class="carousel absolute mb-96 w-[1530px]">
   <!-- slide 1 -->
   <div id="slide1" class="carousel-item relative w-full">
     <div class="hero h-[700px]" style="background-image: url(./images/banner1.png);">
@@ -125,8 +125,9 @@
       <a href="#slide1" class="btn btn-circle">❯</a>
     </div>
   </div>
-</div> 
-<div class="flex ml-20 gap-20 h-[250px] w-[1196px] bg-red-300">
+</div>
+<!-- bonus section 1--> 
+<div class="flex relative top-[550px] left-20 ml-20 gap-20 h-[250px] w-[1000px] bg-white">
   <div class="text-center pt-10">
     <img src="./images/fruit1.png" alt="">
     <h3>Grapes</h3>
@@ -151,9 +152,9 @@
     </header>
     <main class=" container mx-auto">
       <!-- section 1-->
-      <section class="mt-10">
+      <section class="mt-[650px] grid-flow-row">
         <div>
-          <div class="flex gap-20">
+          <div class="flex justify-between">
             <div class="text-left">
               <h2 class="font-bold text-2xl">Deal of the day</h2>
               <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
@@ -185,7 +186,7 @@
               </div>
             </div>
           </div>
-          <div class="flex gap-5 my-12">
+          <div class=" flex gap-5 my-12">
             <div class="card w-96 bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
                 <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
@@ -415,7 +416,7 @@
         </div>
       </section>
       <!-- bonus section 3 -->
-      <section class="container mx-auto p-10">
+      <section class="container mx-auto">
         <div>
           <div class="text-center">
             <h1 class="text-5xl font-bold">Why Choose Us</h1>
